# Haskell-Todo-List

./: README.md  TodoFileSystem.hs  TodoParser.hs  TodoState.hs  TodoTask.hs  TodoUI.hs  main.hs  todo.cabal
src/: TodoFileSystem.hs  TodoParser.hs  TodoState.hs  TodoTask.hs  TodoUI.hs  main.hs
test/: TodoFileSystemSpecs.hs  TodoTaskSpec.hs  runTests.hs
