cabal-version:       3.0
name:                TodoProject
version:             0.1.0.0
synopsis:            A Haskell-based CLI Todo application
description:         A simple Todo app with file system integration and testing.
license:             MIT
author:              Dyami Watson Jr and Matti Henriksen
build-type:          Simple
category:            Utility

extra-source-files:  README.md, test/*.hs

executable TodoApp
  hs-source-dirs:      src
  main-is:             main.hs
  build-depends:       base >= 4.14 && < 5,
                       aeson,
                       bytestring,
                       directory,
                       containers, 
                       time,
                       transformers,
                       filepath
  default-language:    Haskell2010
  other-modules:       TodoTask, TodoState, TodoParser, TodoUI, TodoFileSystem

library
  hs-source-dirs:      src
  exposed-modules:     TodoTask, TodoState, TodoParser, TodoUI, TodoFileSystem
  build-depends:       base >= 4.14 && < 5,
                       aeson,
                       bytestring,
                       directory,
                       containers, 
                       time,
                       transformers,
                       filepath
  default-language:    Haskell2010

test-suite TodoTests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             runTests.hs
  build-depends:       base >= 4.14 && < 5,
                       HUnit,
                       TodoProject,
                       bytestring,
                       directory
  default-language:    Haskell2010
  other-modules:       TodoFileSystemSpecs, TodoTaskSpec